--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,33 @@
   height: 40vmin;
   pointer-events: none;
 }
+.img-wrapper img{
+  width: 135px;
+}
+.cart-wrapper{
+  
+    width: 500px;
+    height: 100px;
 
+}
+.remove-to-cart{margin-left: 5px;}
+.cart-count{
+  position: absolute;
+  right: 30px;
+  top: 1px;
+  z-index: 5;
+  background-color: #cabdd1;
+  padding: 10px;
+  width: 20px;
+  height: 21px;
+  border-radius: 60%;
+}
+.add-to-cart img {
+  width: 80px;
+  position: absolute;
+  right: 1%;
+  top: 1%;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
